--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ポケモン図鑑番号検定</title>
-
 <style>
 body { font-family: system-ui, sans-serif; margin:0; padding:10px; background:#f5f5f5; }
 .container { max-width:500px; margin:auto; background:white; padding:15px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1); }
@@ -13,13 +12,14 @@ select, input, button { width:100%; font-size:1.1em; padding:10px; margin:8px 0;
 #status { text-align:center; font-size:1.1em; margin:10px 0; }
 #timer { font-weight:bold; color:red; }
 .hidden { display:none; }
+
+/* 世代チェックボックス */
 .gen-container { display:grid; grid-template-columns:1fr 1fr; gap:5px; margin:10px 0; border:1px solid #ccc; padding:5px; border-radius:5px; }
 .gen-container label { position:relative; padding-left:5px; display:block; height:25px; line-height:25px; }
 .gen-container input[type="checkbox"] { position:absolute; top:0; right:0; transform:scale(1.2); }
 .gen-note { font-size:0.9em; color:#555; margin-bottom:10px; }
 </style>
 </head>
-
 <body>
 <div class="container">
 <h1>ポケモン図鑑番号検定</h1>
@@ -94,9 +94,7 @@ const modeSelect = document.getElementById("modeSelect");
 const genCheckboxes = document.querySelectorAll(".gen-container input[type='checkbox']");
 
 // 日本語正規化
-function normalizeJP(str){
-  return str.normalize("NFKC").replace(/[\u3041-\u3096]/g, ch=>String.fromCharCode(ch.charCodeAt(0)+0x60));
-}
+function normalizeJP(str){ return str.normalize("NFKC").replace(/[\u3041-\u3096]/g,ch=>String.fromCharCode(ch.charCodeAt(0)+0x60)); }
 
 // 世代範囲
 const genRanges = {
@@ -137,21 +135,28 @@ function updateBest(){
   bestContainer.querySelector("#best").textContent=bests.join(" / ");
 }
 
-// 世代チェックトグル（スマホ対応）
+// 世代チェックトグル（PC・スマホ対応）
 genCheckboxes.forEach(cb=>{
   cb.addEventListener("click", toggleAll);
 });
-function toggleAll(e){
+function toggleAll(){
   const allCb = Array.from(genCheckboxes).find(c=>c.value==='all');
-  if(this.value==='all'){
-    const {nums} = getSelectedNumbers();
-    if(nums.length>0){ genCheckboxes.forEach(c=>c.checked=false); }
-    else{ genCheckboxes.forEach(c=>c.checked=true); }
-  } else {
-    const {allChecked} = getSelectedNumbers();
-    allCb.checked=allChecked;
-  }
-  updateBest();
+  setTimeout(()=>{
+    if(this.value==='all'){
+      const anyChecked = Array.from(genCheckboxes).some(c=>c.value!=='all' && c.checked);
+      if(anyChecked){
+        genCheckboxes.forEach(c=>c.checked=false);
+      } else {
+        genCheckboxes.forEach(c=>c.checked=true);
+      }
+    } else {
+      const allSelected = Array.from(genCheckboxes)
+                            .filter(c=>c.value!=='all')
+                            .every(c=>c.checked);
+      allCb.checked = allSelected;
+    }
+    updateBest();
+  },0);
 }
 
 // ゲーム開始
