--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ポケモン図鑑番号検定</title>
-
 <style>
 body { font-family: system-ui, sans-serif; margin:0; padding:10px; background:#f5f5f5; }
 .container { max-width:500px; margin:auto; background:white; padding:15px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1); }
@@ -18,9 +17,11 @@ select, input, button { width:100%; font-size:1.1em; padding:10px; margin:8px 0;
 .gen-container label { position:relative; padding-left:5px; display:block; height:25px; line-height:25px; }
 .gen-container input[type="checkbox"] { position:absolute; top:0; right:0; transform:scale(1.2); }
 .gen-note { font-size:0.9em; color:#555; margin-bottom:10px; }
+
+#message { text-align:center; font-size:1.1em; margin:10px 0; white-space: pre-line; }
+.answer-red { color:red; font-weight:bold; }
 </style>
 </head>
-
 <body>
 <div class="container">
 <h1>ポケモン図鑑番号検定</h1>
@@ -70,6 +71,8 @@ select, input, button { width:100%; font-size:1.1em; padding:10px; margin:8px 0;
     正解数：<span id="score">0</span>
   </div>
 
+  <div id="message"></div>
+
   <input id="answer" list="pokemonList" placeholder="答えを入力" autocomplete="off">
   <datalist id="pokemonList"></datalist>
 
@@ -93,6 +96,7 @@ const timeSelect = document.getElementById("timeSelect");
 const bestContainer = document.getElementById("bestContainer");
 const modeSelect = document.getElementById("modeSelect");
 const genCheckboxes = document.querySelectorAll(".gen-container input[type='checkbox']");
+const messageDiv = document.getElementById("message");
 
 // 日本語正規化
 function normalizeJP(str){
@@ -148,10 +152,8 @@ function toggleAll(e){
     if(this.value==='all'){
       const anyChecked = Array.from(genCheckboxes).some(c=>c.value!=='all' && c.checked);
       if(anyChecked){
-        // 1つでもオン → 全オフ
         genCheckboxes.forEach(c=>c.checked=false);
       } else{
-        // 全オフ → 全オン
         genCheckboxes.forEach(c=>c.checked=true);
       }
     } else{
@@ -165,6 +167,7 @@ function toggleAll(e){
 // ゲーム開始
 function startGame(){
   score=0;
+  messageDiv.textContent="";
   limit=Number(timeSelect.value);
   document.getElementById("score").textContent=score;
   document.getElementById("game").classList.remove("hidden");
@@ -174,6 +177,7 @@ function startGame(){
 // 次の問題
 function nextQuestion(){
   clearInterval(timer);
+  messageDiv.textContent="";
   const {nums, allChecked}=getSelectedNumbers();
   if(nums.length===0){ alert("世代を選択してください"); return; }
 
@@ -184,7 +188,7 @@ function nextQuestion(){
     timer=setInterval(()=>{
       timeLeft--;
       document.getElementById("timer").textContent=timeLeft;
-      if(timeLeft<=0) gameOver(true,true);
+      if(timeLeft<=0) gameOver("時間切れ！");
     },1000);
   }
 
@@ -215,23 +219,24 @@ answer.addEventListener("input", ()=>{
 // 判定
 function checkAnswer(){
   clearInterval(timer);
-  const input=normalizeJP(answer.value.trim());
-  let correct = modeSelect.value==="num2poke"?normalizeJP(pokemon[currentNumber]):String(currentNumber);
-  if(input===correct){
+  const input = normalizeJP(answer.value.trim());
+  const correct = modeSelect.value==="num2poke"?normalizeJP(pokemon[currentNumber]):String(currentNumber);
+  if(input === correct){
     score++;
-    document.getElementById("score").textContent=score;
+    document.getElementById("score").textContent = score;
     nextQuestion();
   } else{
-    gameOver(false,true,`不正解！
+    gameOver("不正解！");
+  }
 }
 
 // ギブアップ
 function giveUp(){
-  gameOver(false,true,`ギブアップ！
+  gameOver("ギブアップ！");
 }
 
 // ゲームオーバー
-function gameOver(timeOut=false,showAnswer=false,reason="時間切れ！"){
+function gameOver(reason="時間切れ！"){
   clearInterval(timer);
   const {allChecked} = getSelectedNumbers();
   let bests=[0,0,0];
@@ -242,16 +247,18 @@ function gameOver(timeOut=false,showAnswer=false,reason="時間切れ！"){
     else if(score>bests[2]){bests[2]=score;}
     localStorage.setItem(bestKey(), JSON.stringify(bests));
   }
-  let msg=reason+"\nスコア："+score;
-  if(showAnswer){
-    msg+="\n正解は"+(modeSelect.value==="num2poke"?pokemon[currentNumber]:currentNumber)+"」";
-  }
-  if(allChecked) msg+="\n最高記録："+bests.join(" / ");
-  alert(msg);
-  updateBest();
+
+  const correctAnswer = modeSelect.value==="num2poke"?pokemon[currentNumber]:currentNumber;
+  let msg = reason + "\nスコア：" + score + "\n答えは「" + correctAnswer + "」";
+
+  if(allChecked) msg += "\n最高記録：" + bests.join(" / ");
+  
+  // 赤文字表示
+  messageDiv.innerHTML = msg.replace("答えは「" + correctAnswer + "」", `<span class="answer-red">答えは「${correctAnswer}」</span>`);
+
   document.getElementById("game").classList.add("hidden");
+  updateBest();
 }
 </script>
 </body>
 </html>
-
