--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ select, input, button { width:100%; font-size:1.1em; padding:10px; margin:8px 0;
 .gen-container label { position:relative; padding-left:5px; display:block; height:25px; line-height:25px; }
 .gen-container input[type="checkbox"] { position:absolute; top:0; right:0; transform:scale(1.2); }
 .gen-note { font-size:0.9em; color:#555; margin-bottom:10px; }
-#message { text-align:center; font-size:1.1em; margin:10px 0; }
+#message { text-align:center; font-size:1.1em; margin:10px 0; color:red; white-space:pre-line; }
 </style>
 </head>
 <body>
@@ -142,17 +142,14 @@ function updateBest(){
 genCheckboxes.forEach(cb=>{
   cb.addEventListener("change", toggleAll);
 });
-function toggleAll(e){
+function toggleAll(){
   const allCb = Array.from(genCheckboxes).find(c=>c.value==='all');
   setTimeout(()=>{
     if(this.value==='all'){
       const anyChecked = Array.from(genCheckboxes).some(c=>c.value!=='all' && c.checked);
-      if(anyChecked){
-        genCheckboxes.forEach(c=>c.checked=false);
-      } else{
-        genCheckboxes.forEach(c=>c.checked=true);
-      }
-    } else{
+      if(anyChecked) genCheckboxes.forEach(c=>c.checked=false);
+      else genCheckboxes.forEach(c=>c.checked=true);
+    } else {
       const allSelected = Array.from(genCheckboxes).filter(c=>c.value!=='all').every(c=>c.checked);
       allCb.checked=allSelected;
     }
@@ -166,15 +163,15 @@ function startGame(){
   limit=Number(timeSelect.value);
   document.getElementById("score").textContent=score;
   document.getElementById("game").classList.remove("hidden");
-  messageDiv.innerHTML = "";
+  messageDiv.textContent="";
   nextQuestion();
 }
 
 // 次の問題
 function nextQuestion(){
   clearInterval(timer);
-  messageDiv.innerHTML = ""; // 前のメッセージクリア
-  const {nums}=getSelectedNumbers();
+  messageDiv.textContent="";
+  const {nums, allChecked}=getSelectedNumbers();
   if(nums.length===0){ alert("世代を選択してください"); return; }
 
   if(limit===0) document.getElementById("timer").textContent="∞";
@@ -221,9 +218,7 @@ function checkAnswer(){
     score++;
     document.getElementById("score").textContent = score;
     nextQuestion();
-  } else{
-    gameOver("不正解！");
-  }
+  } else gameOver("不正解！");
 }
 
 // ギブアップ
@@ -234,6 +229,8 @@ function giveUp(){
 // ゲームオーバー
 function gameOver(reason="時間切れ！"){
   clearInterval(timer);
+  answer.blur(); // フォーカス解除（スマホ対応）
+
   const {allChecked} = getSelectedNumbers();
   let bests=[0,0,0];
   if(allChecked){
@@ -245,9 +242,10 @@ function gameOver(reason="時間切れ！"){
   }
 
   const correctAnswer = modeSelect.value==="num2poke"?pokemon[currentNumber]:currentNumber;
-  messageDiv.innerHTML = `${reason}<br>スコア：${score}<br>答えは「${correctAnswer}」` +
-                         (allChecked ? `<br>最高記録：${bests.join(" / ")}` : "");
+  let msg = `${reason}\nスコア：${score}\n答えは「${correctAnswer}」`;
+  if(allChecked) msg += `\n最高記録：${bests.join(" / ")}`;
 
+  messageDiv.textContent = msg;
   document.getElementById("game").classList.add("hidden");
   updateBest();
 }
